# DSPHeaders

./: .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  Package.swift  README.md  unsafe_flags_check
.github/workflows/: CI.yml
.swiftpm/xcode/xcshareddata/xcbaselines/DSPHeadersTests.xcbaseline/: 3BD055C8-4AEB-46E3-BD39-78FA88D80D8D.plist  Info.plist
.swiftpm/xcode/xcshareddata/xcschemes/: AUv3-DSP-Headers.xcscheme  AUv3-Support-iOS.xcscheme  AUv3-Support-macOS.xcscheme  AUv3-Support.xcscheme  AUv3Support-Package.xcscheme  DSPHeaders.xcscheme
Sources/DSPHeaders/: DSPHeaders.mm  LowPassFilter.mm  README.md
Sources/DSPHeaders/include/: module.modulemap
Sources/DSPHeaders/include/DSPHeaders/: Accelerated.hpp  Biquad.hpp  BusBufferFacet.hpp  BusBuffers.hpp  BusSampleBuffer.hpp  Concepts.hpp  ConstMath.hpp  DSP.hpp  EventProcessor.hpp  IntrusiveReferenceCounted.hpp  LFO.hpp  LowPassFilter.hpp  PhaseShifter.hpp  TypeErasedKernel.hpp  Types.hpp
Sources/DSPHeaders/include/DSPHeaders/Parameters/: Base.hpp  Bool.hpp  Integral.hpp  README.md  Transformer.hpp
Tests/DSPHeadersTests/: BiquadTests.mm  BusBufferFacetTests.mm  BusBufferTests.mm  DSPTests.mm  EventProcessorTests.mm  LFOTests.mm  LowPassFilterTests.mm  PercentageParameterTests.mm  PhaseIncrementTests.mm  RampingParameterTests.mm  TypesTests.mm
Tests/DSPHeadersTests/Pirkle/: fxobjects.cpp  readme.txt
cmake/: compile_commands.json
